--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,9 +131,9 @@ li {
   background-color: #e7e7e7;
 }
 
-input[type="submit"] { padding: 10px 10px; }
+#submit { padding: 10px 10px; }
 
-input[type="submit"]:hover {
+#submit:hover {
   color: black;
   background-color: burlywood;
   transition: 0.5s;
@@ -143,6 +143,10 @@ input[type="submit"]:hover {
   font-size: 30px;
   text-align: center;
  }
+
+body.sunny { background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423); }
+body.cloudy { background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5); }
+body.rainy { background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3); }
 
 
 
