--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ li {
 =================================*/
 
 .text-field {
-  margin-top: 50px;
+  padding: 200px 0 0;
   text-align: center;
 }
 
@@ -141,9 +141,14 @@ li {
 
 .display { 
   font-size: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  letter-spacing: 1px;
   text-align: center;
- }
+}
 
+.city-name,
+.temperature,
+.description { margin-bottom: 20px; }
 body.sunny { background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423); }
 body.cloudy { background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5); }
 body.rainy { background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3); }
